# kp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.behind-proxy.yml  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
deploy/: Caddyfile
docs/: claude-design-brief.md  design-system.md
docs/superpowers/plans/: 2026-06-18-kp-generator.md
docs/superpowers/specs/: 2026-06-07-kp-generator-design.md
prototype/preview/: kp-m-cover.html  kp-m-product.html  kp-m-totals.html  kp-slide-about.html  kp-slide-addresses.html  kp-slide-contacts.html  kp-slide-cover.html  kp-slide-description.html  kp-slide-hero.html  kp-slide-product-gallery.html  kp-slide-product.html  kp-slide-projects.html  kp-slide-related.html  kp-slide-steps.html  kp-slide-totals.html  kp-slides.css
src/kpgen/: __init__.py  config.py  models.py  pricing.py  store.py
src/kpgen/catalog/: cli.py  index.py  refresh.py
src/kpgen/feed/: parser.py
src/kpgen/render/: html.py  pdf.py
src/kpgen/render/static/: colors_and_type.css  kp-mobile.css  kp-slides.css
src/kpgen/render/templates/: _about.html.j2  _addresses.html.j2  _contacts.html.j2  _crosssell.html.j2  _hero.html.j2  (+7 more)
src/kpgen/scraper/: site.py
src/kpgen/web/: app.py  main.py
tests/: test_catalog_cli.py  test_catalog_index.py  test_config.py  test_feed_parser.py  test_models.py  test_pricing.py  test_refresh.py  test_render_html.py  test_render_pdf.py  test_scraper.py  test_store.py  test_web.py
tests/fixtures/: product_page.html  products_small.xml  sklade_small.xml
